Fixed the duplication bug. Working on expanding/collapsing feature.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,7 +32,6 @@ button:hover {
 	&__side-panel {
 		display: flex;
 		flex-direction: column;
-		border: solid greenyellow 2px;
 		background-color: azure;
 		grid-row: span 2;
 	}
@@ -63,18 +62,20 @@ button:hover {
 
 	// &__project-list-wrapper {
 	// }
-	// &__form {
-	// 	&__label {
-	// 	}
-	// 	&__input {
-	// 	}
-	// 	&__select {
-	// 		&__option {
-	// 		}
-	// 	}
-	// 	&__button {
-	// 	}
-	// }
+	&__form {
+		display: flex;
+		flex-direction: column;
+		// 	&__label {
+		// 	}
+		// 	&__input {
+		// 	}
+		// 	&__select {
+		// 		&__option {
+		// 		}
+		// 	}
+		// 	&__button {
+		// 	}
+	}
 
 	// &__button-wrapper {
 	// 	&__button {
@@ -90,14 +91,14 @@ button:hover {
 		z-index: 1;
 		display: flex;
 		flex-direction: column;
-		&__button {
-		}
+		// &__button {
+		// }
 		&__sort-options {
 			display: flex;
 			flex-direction: column;
 			// position: absolute;
-			&__button {
-			}
+			// &__button {
+			// }
 			&--hidden {
 				display: none;
 			}
